--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>SLOT MACHINE</title>
+  <link rel="icon" href="https://cdn4.iconfinder.com/data/icons/casino-games/512/strawberry-512.png">
   <link rel="stylesheet" href="styles/styles.css">
   <script src="scripts/index.js" defer></script>
 </head>
